--- a/mypresentation.tex
+++ b/mypresentation.tex
@@ -89,7 +89,7 @@ Figures work the same exact way as in any other \LaTeX document:
 \centering
   \includegraphics[width=50mm]{borat}\\
 \end{figure}
-This of course includes the subfigure environment.
+Niiiiice. This of course includes the subfigure environment.
 \end{frame}
 
 \begin{frame}{References}
