--- a/mypresentation.tex
+++ b/mypresentation.tex
@@ -10,6 +10,7 @@
 \date[06.06.2019]{}                                 % Date / Dátum
 \slideheader{EN}                                    % Logo in the header / Logo v hlavicke: SK, EN
 \slidefooter{EN}{STU}                               % Institucia a jazykova varianta / Institution and language version: SK, EN and STU, SjF
+%\bibliographyfile{Bibliography.bib}{EN}             % Use only with "biber"  for BiBLaTeX / Iba používať pre "biber" pre BiBLaTeX
 
 
 
@@ -267,7 +268,7 @@ About 31.
 
 % REFERENCES / BIBLIOGRAFIA
 \referencesslide{Bibliography}{EN}          % Language / jazyk: SK, EN; Name of *.bib file / Nazov *.bib suboru
-
+%\referencesslidebiber{EN}                  % Use only with "biber"  for BiBLaTeX / Iba používať pre "biber" pre BiBLaTeX
 \end{document}
 
 
